# G-SCOP---Lot-sizing-with-remanufacturing

./: .gitignore  README.md
OPL/: example_generator.py  test.mod
OPL/capacitated_dispose/: program.mod  temp.txt  test_graph.sh
OPL/capacitated_dispose/schema/: schema.py  schema2.py
OPL/capacitated_no_dispose/: dp_implementation.cpp  program.mod  temp.txt  test_graph.sh  verify_dp.sh
OPL/capacitated_no_dispose/DP_resolution/: CMakeLists.txt  multiple_verif.sh  verify_dp.sh
OPL/capacitated_no_dispose/DP_resolution/data/: contre_exemple.txt
OPL/capacitated_no_dispose/DP_resolution/src/: CMakeLists.txt  dp_implementation.cpp
OPL/capacitated_no_dispose/data/: ex1.txt  ex2.txt
OPL/capacitated_no_dispose/schema/: schema.py
OPL/uncapacitated_dispose/: program.mod  temp.txt  test_graph.sh
OPL/uncapacitated_no_dispose/: program.mod  temp.txt  test_graph.sh
graph/: graph_generation.py
graph/tests/: T30.txt  T6.txt
test/: graph.sh
